--- a/frontend-coreui/package.json
+++ b/frontend-coreui/package.json
@@ -30,7 +30,6 @@
     "@coreui/react": "^4.3.0",
     "@coreui/react-chartjs": "^2.1.0",
     "@coreui/utils": "^1.3.1",
-    "axios": "^0.27.2",
     "chart.js": "^3.8.0",
     "classnames": "^2.3.1",
     "core-js": "^3.23.4",
@@ -48,6 +47,9 @@
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^14.2.1",
     "auto-changelog": "~2.4.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "prettier": "2.7.1",
     "react-scripts": "5.0.1",
     "sass": "^1.53.0",
     "web-vitals": "^2.1.4"
